force-app/main/default/objects/b3d__Document__c/fields/b3d__Account_ID__c.field-meta.xml
<CustomField>
    <fullName>b3d__Account_ID__c</fullName>
    <externalId>true</externalId>
    <label>Account ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>