force-app/main/default/objects/b3d__Document__c/fields/b3d__Allow_Flow_Back__c.field-meta.xml
<CustomField>
    <fullName>b3d__Allow_Flow_Back__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When checked, the system will automatically update the records on the Document based on the submitters&apos; answers</inlineHelpText>
    <label>Allow Flow Back</label>
    <type>Checkbox</type>
</CustomField>