force-app/main/default/objects/b3d__Document__c/fields/b3d__Core_Object__c.field-meta.xml
<CustomField>
    <fullName>b3d__Core_Object__c</fullName>
    <label>Core Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>