force-app/main/default/objects/b3d__Document__c/fields/b3d__Created_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>b3d__Created_Timestamp__c</fullName>
    <label>Created Timestamp</label>
    <type>DateTime</type>
</CustomField>