force-app/main/default/objects/b3d__Document__c/fields/b3d__Deleted_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>b3d__Deleted_Timestamp__c</fullName>
    <label>Deleted Timestamp</label>
    <type>DateTime</type>
</CustomField>