force-app/main/default/objects/b3d__Document__c/fields/b3d__Disable_Confetti__c.field-meta.xml
<CustomField>
    <fullName>b3d__Disable_Confetti__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Confetti</label>
    <type>Checkbox</type>
</CustomField>