force-app/main/default/objects/b3d__Document__c/fields/b3d__Document_Link__c.field-meta.xml
<CustomField>
    <fullName>b3d__Document_Link__c</fullName>
    <formula>$Setup.b3d__General_Settings__c.b3d__X3B_Sign_Base_URL__c &amp; &quot;/templates/&quot;&amp; b3d__External_Id__c &amp;&quot;/edit?userId=&quot; &amp; $User.Id &amp; &quot;&amp;orgId=&quot; &amp; $Organization.Id &amp; &quot;&amp;sessionId=&quot; &amp; $Api.Session_ID</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Document Link</label>
    <type>Text</type>
</CustomField>