force-app/main/default/objects/b3d__Document__c/fields/b3d__Edit_Document__c.field-meta.xml
<CustomField>
    <fullName>b3d__Edit_Document__c</fullName>
    <formula>IF((ISBLANK(b3d__External_Id__c) || NOT(isNull( b3d__Deleted_Timestamp__c ))), &apos;Not Available&apos;, HYPERLINK(b3d__Document_Link__c,&quot;Edit Document&quot;, &quot;_blank&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Edit Document</label>
    <type>Text</type>
</CustomField>