force-app/main/default/objects/b3d__Document__c/fields/b3d__Hide_Reject_Option__c.field-meta.xml
<CustomField>
    <fullName>b3d__Hide_Reject_Option__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hide Reject Option</label>
    <type>Checkbox</type>
</CustomField>