force-app/main/default/objects/b3d__Document__c/fields/b3d__Invitation_Link__c.field-meta.xml
<CustomField>
    <fullName>b3d__Invitation_Link__c</fullName>
    <formula>IF((ISBLANK(b3d__External_Id__c) || NOT(ISNULL( b3d__Deleted_Timestamp__c ))), &apos;&apos;, $Setup.b3d__General_Settings__c.b3d__X3B_Sign_Base_URL__c &amp; &quot;/d/&quot;&amp; b3d__Slug__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invitation Link</label>
    <type>Text</type>
</CustomField>