force-app/main/default/objects/b3d__Document__c/fields/b3d__Reject_Button_Label__c.field-meta.xml
<CustomField>
    <fullName>b3d__Reject_Button_Label__c</fullName>
    <label>Reject Button Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>