force-app/main/default/objects/b3d__Document__c/fields/b3d__Required_Submitters__c.field-meta.xml
<CustomField>
    <fullName>b3d__Required_Submitters__c</fullName>
    <inlineHelpText>The number of required submitters for this document. This is driven by the 3B Sign app and it is not meant to be updated by Salesforce users</inlineHelpText>
    <label>Required Submitters</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>