force-app/main/default/objects/b3d__Document__c/fields/b3d__Site__c.field-meta.xml
<CustomField>
    <fullName>b3d__Site__c</fullName>
    <inlineHelpText>This is the site on which the document will be available</inlineHelpText>
    <label>Site</label>
    <type>Url</type>
</CustomField>