force-app/main/default/objects/b3d__Document__c/fields/b3d__Status__c.field-meta.xml
<CustomField>
    <fullName>b3d__Status__c</fullName>
    <formula>if(isNull(b3d__Deleted_Timestamp__c), &apos;Active&apos;, &apos;Deleted&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>