force-app/main/default/objects/b3d__Document__c/fields/b3d__Submitters__c.field-meta.xml
<CustomField>
    <fullName>b3d__Submitters__c</fullName>
    <defaultValue>1</defaultValue>
    <inlineHelpText>This is auto-populated and managed by the builder. Do not update manually.</inlineHelpText>
    <label>Submitters</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>