force-app/main/default/objects/b3d__Document__c/fields/b3o__External_Id__c.field-meta.xml
<CustomField>
    <fullName>b3o__External_Id__c</fullName>
    <label>External Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>