force-app/main/default/objects/b3d__Document__c/listViews/b3d__Deleted.listView-meta.xml
<ListView>
    <fullName>b3d__Deleted</fullName>
    <columns>NAME</columns>
    <columns>b3d__Deleted_Timestamp__c</columns>
    <columns>b3d__Required_Submitters__c</columns>
    <columns>b3d__Edit_Document__c</columns>
    <columns>b3d__Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>b3d__Status__c</field>
        <operation>equals</operation>
        <value>Deleted</value>
    </filters>
    <label>Deleted</label>
</ListView>